# proxypal

./: .dockerignore  Cargo.toml  Dockerfile  README.md  package.json  pnpm-lock.yaml  proxypal.db  render.yaml  vite.config.ts  vitest.config.ts
docs/: API_DESIGN.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  DEPLOYMENT_RENDER.md  IMPLEMENTATION_PLAN.md
proxypal-server/: Cargo.toml  proxy-config.yaml  proxypal.db
proxypal-server/src/: lib.rs  main.rs
proxypal-server/src/cliproxy/: config_gen.rs  mod.rs  process.rs
proxypal-server/src/crypto/: mod.rs
proxypal-server/src/db/: migrations.rs  mod.rs  oauth_state.rs  providers.rs  sessions.rs  settings.rs  usage.rs  users.rs
proxypal-server/src/middleware/: admin_auth.rs  api_key_auth.rs  csrf.rs  mod.rs  rate_limit.rs
proxypal-server/src/routes/: auth.rs  config.rs  logs.rs  mod.rs  providers.rs  proxy.rs  usage.rs  users.rs  v1_proxy.rs
proxypal-server/tests/: config_env_tests.rs  e2e_tests.rs
scripts/: docker-smoke-test.sh  post-deploy-smoke.sh
scripts/load-test/: README.md  admin-api.js  full-load.js  proxy-api.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/core/: config.rs  mod.rs  proxy.rs  types.rs
src/__tests__/: App.test.tsx  setup.ts
src/backend/: httpClient.ts  index.ts  tauriClient.ts  types.ts
src/backend/__tests__/: httpClient.test.ts  index.test.ts  tauriClient.test.ts  types.test.ts
src/lib/: tauri.ts
src/lib/backend/: constants.ts  httpClient.ts  index.ts  tauriClient.ts  types.ts
src/pages/: Dashboard.tsx  Login.tsx  Settings.tsx  Usage.tsx  Users.tsx  index.ts
src/pages/__tests__/: DashboardPage.test.tsx  SettingsPage.test.tsx  UsagePage.test.tsx  UsersPage.test.tsx
src/stores/: app.ts
src/stores/__tests__/: appStore.test.ts
