[package]
name = "proxypal-server"
version = "0.1.0"
edition = "2021"

[dependencies]
proxypal = { path = "../src-tauri" }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Server-specific dependencies
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "fs", "cors", "compression-full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
anyhow = "1"
thiserror = "1"
argon2 = { version = "0.5", features = ["password-hash"] }
rand = "0.8"
time = "0.3"
base64 = "0.22"
hex = "0.4"
aes-gcm = "0.10"
tower-cookies = "0.10"
axum-extra = { version = "0.9", features = ["cookie"] }
async-trait = "0.1"
http = "1.0"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
axum-test = "15"
http-body-util = "0.1"
serial_test = "3"
